# kalidokit-rust

./: .cargo-env.sh  .dockerignore  .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  Dockerfile  README.md  features.md  summary.md
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
assets/animations/: Running.fbx  Running.glb  idle.fbx  idle.glb
assets/scripts/: notion_tasks.lua  settings.lua  speech_log.lua  test_os.lua  ui.lua
assets/shaders/: basic.wgsl  debug_overlay.wgsl  mtoon.wgsl  skinning.wgsl
crates/app/: Cargo.toml
crates/app/src/: app.rs  auto_blink.rs  drawio.rs  init.rs  lua_avatar.rs  main.rs  mascot.rs  notion.rs  rig_config.rs  state.rs  terminal.rs  tracker_thread.rs  update.rs  user_prefs.rs
crates/app/src/components/: landmarks.rs  mod.rs  rig.rs
crates/app/src/plugins/: avatar.rs  camera.rs  mod.rs  tracker.rs
crates/app/src/systems/: animate.rs  capture.rs  inference.rs  mod.rs  solve.rs
crates/audio-capture/: Cargo.toml  build.rs
crates/audio-capture/examples/: capture_output.rs  list_devices.rs
crates/audio-capture/src/: lib.rs  resample.rs  sc_audio.rs
crates/avatar-sdk/: Cargo.toml
crates/avatar-sdk/src/: lib.rs  (+2 more)
crates/dynplug/: Cargo.toml  README.md  README_ja.md  features.md
crates/dynplug-example/: Cargo.toml
crates/dynplug-example-l3/: Cargo.toml
crates/dynplug-example-wasm/: Cargo.toml
crates/dynplug/examples/: host.rs  host_wasm.rs  host_wasm_polyglot.rs
crates/dynplug/spec/: RFC.md  SoW.md
crates/dynplug/src/: api.rs  backend.rs  define.rs  error.rs  export.rs  lib.rs  loader.rs  manager.rs  native.rs  platform.rs  vtable.rs  wasm.rs
crates/dynplug/tests/: integration.rs  layer3.rs  wasm_integration.rs
crates/etd/: .gitignore  Cargo.toml  README.md  README_ja.md
crates/etd/docs/: features.md  rfc.md  sow.md
crates/etd/examples/: etd_demo.rs
crates/etd/scripts/: generate_mel_reference.py
crates/etd/src/: audio.rs  error.rs  inference.rs  lib.rs  mel.rs  stft.rs
crates/etd/tests/: e2e_inference.rs  mel_accuracy.rs
crates/go-plugin/: Cargo.toml  build.rs
crates/go-plugin/examples/: greeter-host.rs  greeter-plugin.rs
crates/go-plugin/proto/: example_greeter.proto  grpc_plugin_info.proto  grpc_stdio.proto
crates/go-plugin/src/: client.rs  discover.rs  error.rs  grpc_broker.rs  grpc_client.rs  grpc_server.rs  grpc_stdio.rs  lib.rs  mtls.rs  mux_broker.rs  plugin.rs  plugin_build.rs  plugin_info.rs  protocol.rs  rpc_client.rs  rpc_codec.rs  rpc_server.rs  runner.rs  secure.rs  server.rs  testing.rs
crates/go-plugin/tests/: e2e_grpc.rs
crates/imgui-renderer/: Cargo.toml  README.md  README_ja.md  features.md
crates/imgui-renderer/docs/: rfc.md  sow.md
crates/imgui-renderer/examples/: overlay.rs  standalone.rs
crates/imgui-renderer/src/: lib.rs
crates/imgui-text-edit/: Cargo.toml  build.rs
crates/logger/: Cargo.toml
crates/lua/: Cargo.toml
crates/lua-imgui/: Cargo.toml
crates/lua-imgui/src/: bindings.rs  commands.rs  events.rs  lib.rs  renderer.rs
crates/renderer/: Cargo.toml
crates/renderer/src/: bitmap_font.rs  camera.rs  context.rs  debug_overlay.rs  depth.rs  lib.rs  light.rs  mesh.rs  morph.rs  pipeline.rs  scene.rs  skin.rs  skinned_vertex.rs  texture.rs  vertex.rs
crates/solver/: Cargo.toml
crates/speech-capture/: Cargo.toml  build.rs
crates/speech-capture/examples/: batch_stt.rs  bench_stt.rs  download_model.rs  etd_speech.rs  speech_events.rs  streaming_stt.rs  wav_pipeline.rs
crates/speech-capture/src/: denoise.rs  json_log.rs  lib.rs  segmenter.rs  speech_filter.rs  stt_types.rs  whisper_engine.rs
crates/spring-physics/: Cargo.toml  README.md  README_ja.md  features.md
crates/stt-cli/: Cargo.toml  Dockerfile.linux-check
crates/stt-cli/src/: decode.rs  main.rs  transcribe.rs
crates/ten-vad/: .gitignore  Cargo.toml  build.rs
crates/tracker/: Cargo.toml
crates/tracker/src/: face_mesh.rs  hand.rs  holistic.rs  lib.rs  palm.rs  pose.rs  preprocess.rs
crates/video-decoder/: Cargo.toml  features.md
crates/video-decoder/examples/: decode_to_png.rs  decode_to_png_apple.rs  wgpu_video_bg.rs
crates/video-decoder/shaders/: nv12_to_rgba.wgsl
crates/video-decoder/src/: error.rs  handle.rs  lib.rs  session.rs  types.rs
crates/video-decoder/src/backend/: apple.rs  d3d12_video.rs  gst_vaapi.rs  media_codec.rs  media_foundation.rs  mod.rs  software.rs  v4l2.rs  vulkan_video.rs
crates/video-decoder/src/convert/: color_space.rs  mod.rs
crates/video-decoder/src/demux/: mod.rs  mp4.rs
crates/video-decoder/src/nal/: h264.rs  mod.rs
crates/video-decoder/src/util/: mod.rs  ring_buffer.rs  timestamp.rs
crates/video-decoder/tests/: integration_decode.rs  integration_open.rs
crates/video-decoder/tests/fixtures/: .gitignore
crates/virtual-camera/: Cargo.toml  build.rs
crates/virtual-camera/examples/: vcam_test.rs
crates/virtual-camera/macos-dal/: Info.plist  KalidoKitDALPlugin.m
crates/virtual-camera/macos-extension/: DeviceSource.h  DeviceSource.m  Extension.entitlements  ExtensionInstaller.h  ExtensionInstaller.m  Info.plist  MessagePortSender.h  MessagePortSender.m  ProviderSource.h  ProviderSource.m  SinkStreamSource.h  SinkStreamSource.m  StreamSource.h  StreamSource.m  main.m
crates/virtual-camera/src/: lib.rs  macos.rs
crates/vrm/: Cargo.toml
crates/vrm/src/: animation.rs  animation_player.rs  blendshape.rs  bone.rs  error.rs  lib.rs  loader.rs  look_at.rs  model.rs  spring_bone.rs
docs/: camera-extension-dev-setup.md  camera-extension-distribution.md  design.md  implementation-comparison.md  macos-virtual-camera-adhoc-signing-report.md  virtual-camera-audio.md  wgpu-architecture.md
docs/design/: audio-crate-architecture.md  desktop-mascot-design.md  imgui-wgpu-crate-design.md  kalidokit-core-design.md  ten-vad-binding-design.md  video-background-design.md  video-decoder-crate-design.md  video-decoder-sow.md
docs/report/: wgpu-version-constraint.md
scripts/: build-app-bundle.sh  build-camera-extension.sh  build-dal-plugin.sh  install-extension.m  install.sh  list-cmio-devices.m  setup.sh  test-extension-install.m
(+135 files in other folders)
