[workspace]
resolver = "2"
members = ["crates/app", "crates/renderer", "crates/vrm", "crates/solver", "crates/tracker", "crates/logger"]

[workspace.dependencies]
wgpu = "24.0"
winit = "0.30.9"
glam = { version = "0.29.2", features = ["bytemuck"] }
gltf = "1.4.1"
bytemuck = { version = "1.21", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ort = "2.0.0-rc.12"
nokhwa = { version = "0.10", features = ["input-native"] }
image = "0.25"
ndarray = "0.17"
anyhow = "1.0"
thiserror = "2.0"
pollster = "0.4"
env_logger = "0.11"
log = "0.4"
pipeline-logger = { path = "crates/logger" }
