[workspace]
resolver = "2"
members = ["crates/app", "crates/renderer", "crates/vrm", "crates/solver", "crates/tracker", "crates/logger", "crates/virtual-camera", "crates/video-decoder", "crates/ten-vad", "crates/audio-capture", "crates/speech-capture", "crates/imgui-renderer"]

[workspace.dependencies]
wgpu = "28.0"
winit = "0.30.9"
glam = { version = "0.29.2", features = ["bytemuck"] }
gltf = "1.4.1"
fbxcel = { version = "0.9.0", features = ["tree"] }
bytemuck = { version = "1.21", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
ort = "2.0.0-rc.12"
nokhwa = { version = "0.10", features = ["input-native"] }
image = "0.25"
ndarray = "0.17"
anyhow = "1.0"
thiserror = "2.0"
pollster = "0.4"
env_logger = "0.11"
log = "0.4"
pipeline-logger = { path = "crates/logger" }
