[package]
name = "kalidokit-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
renderer = { path = "../renderer" }
vrm = { path = "../vrm" }
solver = { path = "../solver" }
tracker = { path = "../tracker" }
wgpu = { workspace = true }
winit = { workspace = true }
glam = { workspace = true }
bytemuck = { workspace = true }
image = { workspace = true }
pollster = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }
