[package]
name = "kalidokit-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
renderer = { path = "../renderer" }
vrm = { path = "../vrm" }
solver = { path = "../solver" }
tracker = { path = "../tracker" }
virtual-camera = { path = "../virtual-camera" }
video-decoder = { path = "../video-decoder" }
pipeline-logger = { workspace = true }
wgpu = { workspace = true }
winit = { workspace = true }
glam = { workspace = true }
bytemuck = { workspace = true }
nokhwa = { workspace = true }
image = { workspace = true }
pollster = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
imgui-renderer = { path = "../imgui-renderer" }
lua-imgui = { path = "../lua-imgui" }
