[package]
name = "dynplug"
version = "0.2.0"
edition = "2021"
description = "Cross-platform dynamic plugin loading with layered abstraction"

[features]
default = []
wasm = ["extism"]

[dependencies]
thiserror = { workspace = true }
log = { workspace = true }
libloading = "0.8"
paste = "1.0"
extism = { version = "1.20", optional = true }

[dev-dependencies]
env_logger = "0.11"
