[package]
name = "go-plugin"
version = "0.1.0"
edition = "2021"
description = "Rust port of HashiCorp go-plugin: subprocess-based plugin system over RPC"

[dependencies]
thiserror = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = "0.22"
tokio = { version = "1", features = ["full"] }
tonic = { version = "0.13", features = ["transport", "tls-ring"] }
prost = "0.13"
prost-types = "0.13"
rcgen = "0.13"
rustls = "0.23"
rustls-pemfile = "2"
tokio-rustls = "0.26"
sha2 = "0.10"
glob = "0.3"
yamux = "0.13"
rmp-serde = "1"
tonic-health = "0.13"
tokio-stream = "0.1"
futures = "0.3"
tokio-util = { version = "0.7", features = ["compat"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[build-dependencies]
tonic-build = "0.13"

[dev-dependencies]
tempfile = "3"
env_logger = "0.11"
