[package]
name = "imgui-renderer"
version = "0.1.0"
edition = "2021"
description = "Dear ImGui integration for wgpu applications"

[dependencies]
imgui = { version = "0.12", features = ["docking"] }
imgui-wgpu = "0.28"
imgui-winit-support = "0.13"
wgpu = { workspace = true }
winit = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
pollster = { workspace = true }
env_logger = { workspace = true }

[[example]]
name = "standalone"
path = "examples/standalone.rs"

[[example]]
name = "overlay"
path = "examples/overlay.rs"
