[package]
name = "imgui-renderer"
version = "0.1.0"
edition = "2021"
description = "Dear ImGui integration for wgpu applications"

[dependencies]
dear-imgui-rs = "0.10"
dear-imgui-wgpu = "0.10"
dear-imgui-winit = "0.10"
dear-imnodes = "0.10"
wgpu = { workspace = true }
winit = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
pollster = { workspace = true }
env_logger = { workspace = true }

[[example]]
name = "standalone"
path = "examples/standalone.rs"

[[example]]
name = "overlay"
path = "examples/overlay.rs"
