[package]
name = "lua-imgui"
version = "0.1.0"
edition = "2021"
description = "Lua scripting for Dear ImGui (command buffer, shares existing ImGui context)"

[dependencies]
lua-runtime = { path = "../lua" }
mlua = { workspace = true }
dear-imgui-rs = "0.10"
winit = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
