[package]
name = "renderer"
version = "0.1.0"
edition = "2021"

[dependencies]
wgpu = { workspace = true }
winit = { workspace = true }
glam = { workspace = true }
bytemuck = { workspace = true }
image = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }

[dev-dependencies]
pollster = { workspace = true }
