[package]
name = "speech-capture"
version = "0.1.0"
edition = "2021"
description = "Voice activity detection from microphone with speech segmentation"

[dependencies]
audio-capture = { path = "../audio-capture" }
ten-vad = { path = "../ten-vad" }
log = { workspace = true }
thiserror = { workspace = true }

# Optional: Speech-to-Text via whisper.cpp
whisper-rs = { version = "0.16", optional = true }

[features]
default = []
stt = ["dep:whisper-rs"]
stt-metal = ["stt", "whisper-rs/metal"]

[dependencies.serde]
workspace = true

[dependencies.serde_json]
workspace = true

[dev-dependencies]
env_logger = { workspace = true }
