[package]
name = "speech-capture"
version = "0.1.0"
edition = "2021"
description = "Voice activity detection from microphone with speech segmentation"

[dependencies]
audio-capture = { path = "../audio-capture" }
ten-vad = { path = "../ten-vad" }
log = { workspace = true }
thiserror = { workspace = true }

# Noise suppression (RNNoise, pure Rust)
nnnoiseless = "0.5"

# FFT for spectral speech detection
rustfft = "6.4"

# Timestamp formatting
chrono = "0.4"

# Optional: Speech-to-Text via whisper.cpp
whisper-rs = { version = "0.16", optional = true }

# Optional: End-of-Turn Detection
etd = { path = "../etd", optional = true }

[features]
default = []
stt = ["dep:whisper-rs"]
stt-metal = ["stt", "whisper-rs/metal"]
end-of-turn = ["dep:etd"]

[dependencies.serde]
workspace = true

[dependencies.serde_json]
workspace = true

[dev-dependencies]
env_logger = { workspace = true }
hound = "3.5"
whisper-rs = "0.16"
