[package]
name = "video-decoder"
version = "0.1.0"
edition = "2021"
description = "Platform-native HW video decoder with zero-copy GPU texture output"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
wgpu = { workspace = true }
mp4parse = "0.17"
h264-reader = "0.7"
openh264 = "0.6"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = "0.3"
objc2-av-foundation = { version = "0.3", features = ["objc2-core-media"] }
objc2-core-media = "0.3"
objc2-core-video = "0.3"
objc2-core-foundation = "0.3"

[target.'cfg(target_os = "linux")'.dependencies]
ash = { version = "0.38", default-features = false, features = ["std", "debug"] }

# Optional GStreamer (VA-API fallback)
gstreamer = { version = "0.23", optional = true }
gstreamer-app = { version = "0.23", optional = true }
gstreamer-video = { version = "0.23", optional = true }
gstreamer-allocators = { version = "0.23", optional = true }

# Optional V4L2 (SBC)
nix = { version = "0.29", features = ["ioctl", "mman", "fs"], optional = true }

[target.'cfg(target_os = "android")'.dependencies]
ndk = { version = "0.9", features = ["media"] }
ash = { version = "0.38", default-features = false, features = ["std"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Graphics_Direct3D12",
    "Win32_Media_MediaFoundation",
    "Win32_System_Com",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
] }

[features]
default = []
gstreamer = ["dep:gstreamer", "dep:gstreamer-app", "dep:gstreamer-video", "dep:gstreamer-allocators"]
v4l2 = ["dep:nix"]

[dev-dependencies]
pollster = { workspace = true }
env_logger = { workspace = true }
image = { workspace = true }
anyhow = { workspace = true }
