[package]
name = "virtual-camera"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
log = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = "0.3"
objc2-core-media-io = { version = "0.3", features = [
    "CMIOHardwareSystem", "CMIOHardwareObject", "CMIOHardwareDevice", "CMIOHardwareStream",
] }
objc2-core-media = { version = "0.3", features = [
    "CMSampleBuffer", "CMFormatDescription", "CMTime", "CMSimpleQueue",
    "objc2-core-video",
] }
objc2-core-video = { version = "0.3", features = [
    "CVBuffer", "CVImageBuffer", "CVPixelBuffer", "CVReturn",
] }
objc2-core-foundation = { version = "0.3", features = [
    "CFString", "CFCGTypes",
] }

[target.'cfg(target_os = "macos")'.build-dependencies]
cc = "1"
