[package]
name = "virtual-camera"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
log = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"

[dev-dependencies]
env_logger = "0.11"

[target.'cfg(target_os = "macos")'.build-dependencies]
cc = "1"
