[package]
name = "vrm"
version = "0.1.0"
edition = "2021"

[dependencies]
renderer = { path = "../renderer" }
gltf = { workspace = true }
fbxcel = { workspace = true }
glam = { workspace = true }
bytemuck = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
image = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
